# flou-server

./: .env.sample  .pdm-python  Makefile  README.md  alembic.ini  pyproject.toml  ruff.toml
fastapi_app/: celery.py  config.py  dependencies.py  main.py
fastapi_app/models/: __init__.py
fastapi_app/modules/: web_app.py
fastapi_app/utils/: route_handler.py  s3_client.py
flou_server/: celery.py  config.py  database.py  dependencies.py  main.py
flou_server/crud/: base.py  domain.py
flou_server/db/: env.py  script.py.mako
flou_server/db/versions/: 2023_04_04_1551-e8fe31da6e29_create_domains_table.py
flou_server/models/: base.py  domain.py
flou_server/modules/: base_api.py  web_app.py
flou_server/schemas/api/: domain.py
flou_server/services/: base.py  domain.py
flou_server/utils/: s3_client.py
supabase/: config.toml
