[tool.poetry]
name = "flou_server"
version = "0.1.0"
description = "100% your productivity"
authors = ["Petr Gazarov <petrgazarov@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "~0.111"
uvicorn = "~0.28"
more_itertools = "*"
sqlmodel = "0.0.19"
pydantic = "~2.8.2"
toolz = "~0.12"
genson = "~1.2"
asyncpg = "~0.29"
greenlet = "~3.0"
alembic = "~1.10"
rich = "~13.7"
supertokens-python = "~0.12"
requests = "~2.31"
boto3 = "~1.34"
celery = { extras = ["sqs"], version = "~5.2" }
psycopg2 = "^2.9.9"
ruff = "^0.5.2"

[tool.poetry.dev-dependencies]
mypy = "~1.2"
python-dotenv = "~1.0"
black = "~24.2"
types-requests = "~2.31"
types-PyMySQL = "~1.1"
types-Pygments = "~2.17"
types-psycopg2 = "~2.9"
types-python-dateutil = "~2.8"
types-ujson = "~5.9"
boto3-stubs = { extras = ["s3"], version = "~1.34" }
pre-commit = "~3.5"

[tool.pdm]
distribution = false

[tool.pdm.dev-dependencies]
dev = [
    "mypy~=1.2",
    "python-dotenv~=1.0",
    "black~=24.2",
    "types-requests~=2.31",
    "types-PyMySQL~=1.1",
    "types-Pygments~=2.17",
    "types-psycopg2~=2.9",
    "types-python-dateutil~=2.8",
    "types-ujson~=5.9",
    "boto3-stubs[s3]~=1.34",
    "pre-commit~=3.5",
]

[tool.pdm.build]
includes = []
[project]
name = "flou_server"
version = "0.1.0"
description = "100% your productivity"
authors = [
    {name = "Omar Sotillo Franco", email = "kurodasogo@gmail.com"},
    {name = "Petr Gazarov", email = "petrgazarov@gmail.com"},
]
dependencies = [
    "fastapi~=0.111",
    "uvicorn~=0.28",
    "more-itertools",
    "sqlmodel==0.0.19",
    "pydantic~=2.8.2",
    "toolz~=0.12",
    "genson~=1.2",
    "asyncpg~=0.29",
    "greenlet~=3.0",
    "alembic~=1.10",
    "rich~=13.7",
    "supertokens-python~=0.12",
    "requests~=2.31",
    "boto3~=1.34",
    "celery[sqs]~=5.2",
    "psycopg2<3.0.0,>=2.9.9",
]
requires-python = "<4.0,>=3.12"
readme = "README.md"
license = {text = "MIT"}

